Deploy/insurance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  name: insurance-deployment
  labels:
    deploy: insurance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insurance
  template:
    metadata:
      labels:
        app: insurance
    spec:
      containers:
        - name: insurance
          image: "registryhku7094.azurecr.io/insurance:1.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              # name: http
              # protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: insurance
spec:
  type: ClusterIP
  selector:
    app: insurance
  ports:
    - protocol: TCP
      name: insurance-http
      port: 80
      targetPort: 8081
